--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -66,7 +66,12 @@ body.nav-md .container.body .right_col.main{
 }
 
 .form-group .bootstrap-select.btn-group, .form-horizontal .bootstrap-select.btn-group, .form-inline .bootstrap-select.btn-group {
+	margin: 0px;
+}
+
+.select-with-margin-container {
 	margin-bottom: 10px;
+	padding: 0px;
 }
 
 .form-disabled-text {
