--- a/src/main/resources/templates/provider/providerShowAll.html
+++ b/src/main/resources/templates/provider/providerShowAll.html
@@ -130,7 +130,7 @@
 					<div class="tile-stats">
 						<div class="icon"><i class="fa fa-user-md"></i></div>
 						<div class="col-xs-10">
-		                	<div class="count" th:text="#{label.persone}"></div>
+		                	<div class="tile-text" th:text="#{label.persone}"></div>
 		                	<p class="count-text" th:text="#{label.visualizza_lista_persone}">Visualizza la lista di tutte le persone</p>
 						</div>
 					</div>
@@ -139,7 +139,7 @@
 					<div class="tile-stats">
 						<div class="icon"><i class="fa fa-clipboard"></i></div>
 						<div class="col-xs-10">
-		                	<div class="count" th:text="#{label.accreditamenti}"></div>
+		                	<div class="tile-text" th:text="#{label.accreditamenti}"></div>
 		                	<p class="count-text" th:text="#{label.visualizza_lista_accreditamenti}">Visualizza la lista di tutte gli accreditamenti</p>
 						</div>
 					</div>
@@ -148,7 +148,7 @@
 					<div class="tile-stats">
 						<div class="icon"><i class="fa fa-calendar"></i></div>
 						<div class="col-xs-10">
-		                	<div class="count" th:text="#{label.eventi}"></div>
+		                	<div class="tile-text" th:text="#{label.eventi}"></div>
 		                	<p class="count-text" th:text="#{label.visualizza_lista_eventi}">Visualizza la lista di tutti gli eventi</p>
 						</div>
 					</div>
@@ -157,7 +157,7 @@
 					<div class="tile-stats">
 						<div class="icon"><i class="fa fa-paperclip"></i></div>
 						<div class="col-xs-10">
-		                	<div class="count" th:text="#{label.allegati}"></div>
+		                	<div class="tile-text" th:text="#{label.allegati}"></div>
 		                	<p class="count-text" th:text="#{label.visualizza_lista_allegati}">Visualizza la lista di tutti gli allegati</p>
 						</div>
 					</div>
