Gestione anagrafiche provider

--- a/src/main/resources/templates/anagrafica/anagraficaList.html
+++ b/src/main/resources/templates/anagrafica/anagraficaList.html
@@ -29,9 +29,9 @@
 							</thead>
 							<tbody th:remove="all-but-first">
 								<tr th:each="anagrafica, row : ${anagraficaList}">
-									<td th:text="${anagrafica.cognome}">Cognome</td>
+									<td><a th:text="${anagrafica.codiceFiscale}" th:href="@{|/provider/${anagrafica.provider.id}/anagrafica/${anagrafica.id}/edit|}">Codice fiscale</a></td>
 									<td th:text="${anagrafica.nome}">Cognome</td>
-									<td th:text="${anagrafica.codiceFiscale}">Cognome</td>
+									<td th:text="${anagrafica.cognome}">Cognome</td>
 								</tr>
 							</tbody>
 						</table>
