--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -339,6 +339,12 @@
 			                  ]
 			});
 
+			$('.datatable-responsive-search-anagrafica').DataTable({
+				"bInfo" : false,
+				"bPaginate" : false,
+			    "order": [[ 0, 'asc' ], [ 1, 'asc' ]],
+			});
+
 			$('.datatable-responsive-mypay').DataTable({
 				"bFilter" : false,
 				"bInfo" : false,
