--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -25,7 +25,7 @@
 								</div>
 								<div th:if="${#fields.hasErrors('oldPassword')}" class="alert" th:errors="*{oldPassword}"></div>
 							</div>
-							
+
 							<!-- new password -->
 							<div class="item form-group" th:classappend="${#fields.hasErrors('newPassword')} ? 'bad'">
 								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="newPassword">
@@ -34,11 +34,11 @@
 								</label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
 									<input type="password" id="newPassword" th:field="*{newPassword}"
-										required="required" class="form-control col-md-7 col-xs-12" />
+										required="required" data-validate-length-range="8,12" pattern="passwordEcm" class="form-control col-md-7 col-xs-12" />
 								</div>
 								<div th:if="${#fields.hasErrors('newPassword')}" class="alert" th:errors="*{newPassword}"></div>
 							</div>
-							
+
 							<!-- repeat new password -->
 							<div class="item form-group" th:classappend="${#fields.hasErrors('confirmNewPassword')} ? 'bad'">
 								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="confirmNewPassword">
@@ -51,8 +51,8 @@
 								</div>
 								<div th:if="${#fields.hasErrors('confirmNewPassword')}" class="alert" th:errors="*{confirmNewPassword}"></div>
 							</div>
-		                    
-		                    
+
+
 		                    <!-- Invia dati -->
 							<div class="item form-group text-right">
 								<a class="btn btn-default right" th:href="@{/home}" th:text="#{label.annulla}"></a>
@@ -62,7 +62,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 		</div>
 	</body>
 </html>
